sdks/rust/golem-rust/tests/ui/fail/same_crate_plain_impl.stderr
error[E0046]: not all trait items implemented, missing: `agent_implementation_annotation`
  --> tests/ui/fail/same_crate_plain_impl.rs:13:1
   |
 3 | #[agent_definition]
   | ------------------- `agent_implementation_annotation` from trait
...
13 | impl SameCrateAgent for SameCrateAgentImpl {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `agent_implementation_annotation` in implementation
